[tool.poetry]
name = "sec-feeds"
version = "0.1.0"
description = "Cybersecurity RSS feeds"
authors = ["George-Andrei Iosif <hi@iosifache.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
requests = "^2.32.3"
feedgen = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
